--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
-                <div v-for="slide in slides" class="item">
-                    <img :src="slide.image" :alt="slide.title" />
+                <div v-for="(slide, index) in slides" class="item" :class="active===index? 'main_active' : ''" >
+                    <img :src="slide.image" :alt="slide.title"/>
                     <div class="text">
                         <h3>{{slide.title}}</h3>
                         <p>
@@ -28,8 +28,8 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
+                    <div @click="PrevSlide" class="prev"></div>
+                    <div @click="NextSlide" class="next"></div>
                     <div v-for="slide in slides" class="thumb">
                         <img :src="slide.image" alt="slide.title">
                     </div>
