--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="thumbs">
                     <div @click="PrevSlide" class="prev"></div>
                     <div @click="NextSlide" class="next"></div>
-                    <div v-for="slide in slides" class="thumb">
+                    <div v-for="(slide, index) in slides" class="thumb" :class="active===index? 'active' : ''">
                         <img :src="slide.image" alt="slide.title">
                     </div>
                 </div>
